--- a/css/output.css
+++ b/css/output.css
@@ -1,11 +1,45 @@
 .buttons {
   max-width: 400px;
-  border: 1px solid black; }
-  .buttons .button-block .button-number {
-    width: 100px;
-    font-size: 16px; }
-  .buttons .button-block .button-operator {
-    width: 100px;
-    font-size: 16px; }
+  border: 1px solid black;
+}
+.buttons .button-block .button-number {
+  width: 100px;
+  font-size: 16px;
+}
+.buttons .button-block .button-operator {
+  width: 100px;
+  font-size: 16px;
+}
 
-/*# sourceMappingURL=output.css.map */
+.history {
+  max-width: 400px;
+  max-height: 300px;
+  overflow: visible;
+  text-align: center;
+  font-size: 20px;
+  font-family: "Times New Roman", Times, serif;
+}
+
+.flex-container {
+  max-width: 500px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.flex-container .button-block > button {
+  width: 50px;
+  margin-right: 10px;
+}
+.flex-container .flex-row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
