--- a/scss/input.scss
+++ b/scss/input.scss
@@ -12,3 +12,26 @@
         }
     }
 }
+
+.history {
+    max-width: 400px;
+    max-height: 300px;
+    overflow: visible;
+    text-align: center;
+    font-size: 20px;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+.flex-container {
+    max-width: 500px;
+    display:flex;
+    flex-direction: column;
+    .button-block > button {
+        width: 50px;
+        margin-right:10px;
+    }
+    .flex-row {
+        display:flex;
+        flex-direction: row;
+    }
+}
