--- a/css/output.css
+++ b/css/output.css
@@ -1,45 +1,70 @@
-.buttons {
-  max-width: 400px;
-  border: 1px solid black;
-}
-.buttons .button-block .button-number {
-  width: 100px;
-  font-size: 16px;
-}
-.buttons .button-block .button-operator {
-  width: 100px;
-  font-size: 16px;
-}
+.input {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; }
+
+.flex-container {
+  display: flex;
+  flex-direction: column; }
+
+.flex-container .flex-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between; }
+
+.container {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%); }
 
 .history {
-  max-width: 400px;
-  max-height: 300px;
-  overflow: visible;
+  max-width: 500px;
+  height: 200px;
+  overflow-y: scroll;
   text-align: center;
   font-size: 20px;
   font-family: "Times New Roman", Times, serif;
-}
+  color: white;
+  background-color: #474557; }
+  .history .history-list {
+    margin: 0 auto;
+    list-style-type: none;
+    cursor: pointer; }
+
+.input {
+  height: 50px; }
+  .input #input-textarea {
+    width: 400px;
+    height: 20px;
+    font-family: "Times New Roman", Times, serif;
+    font-size: 20px;
+    text-align: center; }
+  .input .check-angle {
+    text-align: center; }
 
 .flex-container {
-  max-width: 500px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-.flex-container .button-block > button {
-  width: 50px;
-  margin-right: 10px;
-}
-.flex-container .flex-row {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-}
+  max-width: 500px; }
+  .flex-container .button-block > button {
+    width: 50px; }
+  .flex-container .flex-row .button-operator-equally {
+    width: 110px;
+    background-color: #2CAE23; }
+  .flex-container .flex-row .button-block {
+    box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+    border: 1px solid #c0c0c0 #7491a5 #7491a5 #c0c0c0;
+    border-radius: 4px;
+    font-size: 20px;
+    margin: 5px; }
+    .flex-container .flex-row .button-block > button {
+      cursor: pointer;
+      font-size: 20px; }
+
+.container {
+  border: 1px solid gray;
+  max-width: 600px;
+  background-color: #E0E0E8; }
+
+/*# sourceMappingURL=output.css.map */
