--- a/scss/input.scss
+++ b/scss/input.scss
@@ -1,37 +1,101 @@
-.buttons {
-    max-width: 400px;
-    border: 1px solid black;
-    .button-block {
-        .button-number {  
-            width: 100px;
-            font-size: 16px;
-        }
-        .button-operator{  
-            width: 100px;
-            font-size: 16px;
-        }
-    }
+$font: 'Times New Roman', Times, serif;
+$historyBgColor: #474557;
+$btnEquallyBgColor: #2CAE23;
+$btnBoxShadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+$containerBgColor: #E0E0E8;
+$containerBorder : 1px solid gray;
+$btnBorder: 1px solid #c0c0c0 #7491a5 #7491a5 #c0c0c0;
+$maxWidth: 500px;
+$maxWidthContainer: 600px;
+$fontSize: 20px;
+
+%display-flex-input {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+%display-flex-flexContainer {
+    display:flex;
+    flex-direction: column;
+}
+
+%display-flex-flexRow {
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+%location-container {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
 }
 
 .history {
-    max-width: 400px;
-    max-height: 300px;
-    overflow: visible;
+    max-width: $maxWidth;
+    height: 200px;
+    overflow-y: scroll;
     text-align: center;
-    font-size: 20px;
-    font-family: 'Times New Roman', Times, serif;
+    font-size: $fontSize;
+    font-family: $font;
+    color:white;
+    background-color: $historyBgColor;
+    .history-list {
+        margin: 0 auto;
+        list-style-type: none;
+        cursor: pointer;
+    }
+}
+
+.input {
+    @extend %display-flex-input;
+    height: 50px;
+    #input-textarea {
+        width: 400px;
+        height: 20px;
+        font-family: $font;
+        font-size: $fontSize;
+        text-align: center;
+
+    }
+    .check-angle {
+        text-align: center;
+    }
 }
 
 .flex-container {
-    max-width: 500px;
-    display:flex;
-    flex-direction: column;
+    max-width: $maxWidth;
+    @extend %display-flex-flexContainer;
     .button-block > button {
         width: 50px;
-        margin-right:10px;
     }
     .flex-row {
-        display:flex;
-        flex-direction: row;
+        @extend %display-flex-flexRow;
+        .button-operator-equally {
+            width: 110px;
+            background-color: $btnEquallyBgColor;
+        }
+        .button-block {
+            box-shadow: $btnBoxShadow;
+            border: $btnBorder;
+            border-radius: 4px;
+            font-size: $fontSize;
+            margin: 5px;
+            & > button {
+                cursor: pointer;
+                font-size: 20px;
+            }
+        }
     }
+}
+
+.container {
+    border: $containerBorder;
+    max-width: $maxWidthContainer;
+    @extend %location-container;
+    background-color: $containerBgColor; 
 }
